--- a/helloworld/pom.xml
+++ b/helloworld/pom.xml
@@ -11,4 +11,5 @@
         <maven.compiler.target>19</maven.compiler.target>
         <exec.mainClass>com.mycompany.helloworld.Helloworld</exec.mainClass>
     </properties>
+    <name>HelloWorld</name>
 </project>
