--- a/windowmaster/pom.xml
+++ b/windowmaster/pom.xml
@@ -11,4 +11,5 @@
         <maven.compiler.target>19</maven.compiler.target>
         <exec.mainClass>com.mycompany.windowmaster.Windowmaster</exec.mainClass>
     </properties>
+    <name>WindowMaster</name>
 </project>
