Uploaded exercises practicing basic and intermediate java

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 /PracticeProgramming/target/
 /ProjectProgramming/target/
 /A1BasicProgrammingConcepts/target/
+/DVDLibrary/target/
+/ClassRoster/target/
+/ClassRosterWithServiceLayer/target/
+/MyLombokDemo/target/
+/EmployeeProject/target/
